# orbe

./: .gitignore  CONTEXT.md  README.md  dependency-cruiser.cjs  eslint.config.mjs  package-lock.json  package.json  packages\contracts\package.json  packages\domain\src\index.ts  tsconfig.base.json  vitest.config.ts  vitest.workspace.ts
.github/workflows/: bootstrap-lock.yml  ci.yml  hydrate-dependencies.yml  hydrate-playwright.yml  hydrate-task6-rust.yml  hydrate-zod.yml  scaffold-desktop.yml
apps/desktop/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.mjs  vitest.config.mjs
apps/desktop/e2e/: harness.spec.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_initial.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: local_finance.rs  mod.rs
apps/desktop/src-tauri/src/database/: key.rs  migrations.rs  mod.rs
apps/desktop/src-tauri/tests/: database.rs
apps/desktop/src/app/: App.css  App.test.tsx  App.tsx  composition.ts  ports.ts  routes.tsx  workspace-aliases.test.ts
apps/desktop/src/layout/: AppShell.test.tsx  (+5 more)
docs/architecture/: local-first-boundary.md
docs/superpowers/plans/: 2026-07-13-orbe-cards-recurring-reports.md  2026-07-13-orbe-desktop-finance.md  2026-07-13-orbe-foundation-domain.md  2026-07-13-orbe-roadmap.md  2026-07-13-orbe-site-release.md  2026-07-13-orbe-sync-auth-admin.md
docs/superpowers/specs/: 2026-07-13-orbe-design.md
(+4 files in other folders)
