[package]
name = "desktop"
version = "0.1.0"
description = "Orbe desktop application"
authors = ["Raphael / Orbe"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.1", features = ["bundled-sqlcipher-vendored-openssl"] }
uuid = { version = "1.23.4", features = ["v7", "serde"] }
keyring = "4.1.4"
secrecy = "0.10"
thiserror = "2"
rand = "0.8.6"
hex = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
